# Probly

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  examples.py  probly.py  pyproject.toml  scirandom.py  setup.py  test.py  tour.ipynb
doc/source/: conf.py  index.rst  modules.rst  probly.rst  quick.rst
docs/: README.md
docs/source/: conf.py  examples.rst  index.rst  installation.rst  quick.rst  ref.rst  topics.rst
docs/source/ref/: core.rst  distr.rst  distributions.rst  helpers.rst  index.rst  utilities.rst
examples/: random_human.py
probly/: __init__.py  condition.py  construct.py  core.py  distr.py  distributions.py  exceptions.py  graphtools.py  helpers.py  nodes.py  programs.py  random_arrays.py  random_variables.py  randomvar.py  rmat.py  utils.py
probly/core/: __init__.py  nodes.py  random_arrays.py  random_iterators.py  random_variables.py
probly/distr/: __init__.py  continuous.py  discrete.py  distributions.py  matrix.py
probly/lib/: __init__.py  properties.py  utils.py
tests/: test_core.py  test_distributions.py
tests/core/: test_random_arrays.py  test_random_variables.py
tests/test_core/: test_random_arrays.py
tests/test_distr/: test_continuous.py  test_discrete.py  test_distributions.py
tests/test_lib/: __init__.py
