[project]
name = "probly"
version = "0.1.0"
description = "A random variable library for Python."
authors = [{ name = "Ben Wallace", email = "bencwallace@gmail.com" }]
requires-python = ">=3.8,<3.10"
license = "BSD-3-Clause"
dependencies = [
    "numpy<1.20",
    "scipy>=1.9.1,<2",
    "matplotlib>=3.5.3,<4",
]

[dependency-groups]
dev = ["ipython>=8.4.0,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
